--- a/src/app/views/movie/movie-card/movie-card.component.html
+++ b/src/app/views/movie/movie-card/movie-card.component.html
@@ -1,6 +1,9 @@
 
 <div class="movie-card">
-  <h1 class="movie-title">{{movie.title}}</h1>
+  <div *ngIf=movie.weLike class="heart-icon">
+    ❤️
+  </div>
+<h1 class="movie-title">{{movie.title}}</h1>
   <img src="{{movie.poster}}" alt="Image principale du film" class="movie-image">
   <p class="movie-synopsis">{{movie.synopsis | slice:0:200}}...</p>
   <a routerLink="/movies/{{movie.id}}">Plus de détails</a>
