--- a/src/app/views/home/homepage/homepage.component.html
+++ b/src/app/views/home/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<h2>Derniers ajouts</h2>
+<h2>Les sorties de la semaine </h2>
 <div class="movies-flex">
   <app-movie-card *ngFor="let movie of lastMoviesAdd" [movie]="movie"></app-movie-card>
 </div>
