--- a/src/app/views/home/main/main.component.html
+++ b/src/app/views/home/main/main.component.html
@@ -1,4 +1,7 @@
 <app-navbar></app-navbar>
+<div class="side-curtain left"></div>
+<div class="side-curtain right"></div>
+
 <main>
 <router-outlet></router-outlet>
 </main>
