--- a/src/app/views/home/navbar/navbar.component.html
+++ b/src/app/views/home/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <nav class="navbar-menu">
     <a routerLink="/home" routerLinkActive="active">Accueil</a>
     <a routerLink="/movies" routerLinkActive="active">Film</a>
-    <a routerLink="/salle" routerLinkActive="active">Salle</a>
+    <a routerLink="/movieTheater" routerLinkActive="active">Nos Cinemas</a>
   </nav>
   <div class="navbar-login">
     <a routerLink="/login" routerLinkActive="active">Se connecter</a>
