mise en service de la vue  movie details

--- a/src/app/views/home/navbar/navbar.component.html
+++ b/src/app/views/home/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header class="navbar">
   <div class="navbar-logo">
-    <img src="assets/logo.png" alt="Logo" />
+    <img src="assets/logo.png" alt="logo" />
   </div>
   <nav class="navbar-menu">
     <a routerLink="/home" routerLinkActive="active">Accueil</a>
