--- a/src/app/views/auth/registry/registry.component.html
+++ b/src/app/views/auth/registry/registry.component.html
@@ -1,1 +1,2 @@
-<p>registry works!</p>
+<label for="registryUser">Name: </label>
+<input id="registryUser" type="text" [formControl]="registryUser">
