--- a/src/app/views/home/homepage/homepage.component.html
+++ b/src/app/views/home/homepage/homepage.component.html
@@ -1,3 +1,8 @@
+
+<div class="home-presentation">
+ <h1>Cinephoria</h1>
+  <p> Venez comme vous imaginez </p>
+</div>
 <h2>Les sorties de la semaine </h2>
 <div class="movies-flex">
   <app-movie-card *ngFor="let movie of lastMoviesAdd" [movie]="movie"></app-movie-card>
