--- a/src/app/views/home/navbar/navbar.component.html
+++ b/src/app/views/home/navbar/navbar.component.html
@@ -1,13 +1,15 @@
 <header class="navbar">
   <div class="navbar-logo">
-    <img src="assets/logo.png" alt="logo" />
+    <img src="assets/image/logo.jpeg" alt="logo cinephoria" />
   </div>
   <nav class="navbar-menu">
     <a routerLink="/home" routerLinkActive="active">Accueil</a>
     <a routerLink="/movies" routerLinkActive="active">Film</a>
     <a routerLink="/movieTheater" routerLinkActive="active">Nos Cinemas</a>
+    <a routerLink="/dashboard" routerLinkActive="active">dashboard</a>
   </nav>
   <div class="navbar-login">
-    <a routerLink="/login" routerLinkActive="active">Se connecter</a>
+    <a routerLink="/login" routerLinkActive="active">Connection</a>
+
   </div>
 </header>
