--- a/src/app/views/home/navbar/navbar.component.css
+++ b/src/app/views/home/navbar/navbar.component.css
@@ -10,16 +10,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #404240; /* Légèrement transparent */
-  color: white;
+  background-color: rgba(255, 255, 255); /* Légèrement transparent */
+  color: black;
   padding: 0 20px;
-  border-radius: 8px;
+  border-radius: 2% / 50%;;
   z-index: 1000; /* Toujours au-dessus */
   box-shadow: 0 2px 10px rgba(64, 62, 62, 0.5);
 }
 
 .navbar-logo img {
   height: 40px; /* Ajuste la hauteur du logo à votre besoin */
+  border-radius: 25%;
 }
 
 .navbar-menu {
@@ -30,7 +31,7 @@
 .navbar-menu a,
 .navbar-login a {
   text-decoration: none;
-  color: white;
+  color: black;
   font-size: 16px;
   font-weight: bold;
   transition: color 0.3s;
@@ -38,20 +39,30 @@
 
 .navbar-menu a:hover,
 .navbar-login a:hover {
-  color: #00bcd4; /* Couleur d'accentuation au survol */
+  color: gold; /* Couleur d'accentuation au survol */
 }
-
+.navbar-login{
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
 .navbar-login a {
-  padding: 5px 10px;
-  border: 1px solid white;
-  border-radius: 4px;
+  background-color: gold;
+  /*height: 50%;*/
+  text-align: center;
+  padding: 5% ;
+  border: 1px solid black;
+  border-radius: 15%/50%;
 }
 
 .navbar-login a:hover {
-  background-color: #00bcd4;
+  background-color: gold;
   color: black;
 }
 
+
 .active {
-  border-bottom: 2px solid #00bcd4; /* Active link indication */
+  border-bottom: 2px solid gold; /* Active link indication */
 }
+
+
