--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #f1d6ab;
+  /*background-color: #f1d6ab;*/
+  background-color: whitesmoke;
+
 }/* You can add global styles to this file, and also import other style files */
